--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ I scale global technology organisations that build and deploy intelligent system
                         </p>
                         <ul class="pillar-roles">
                             <li><strong>Xero</strong>, Head of Artificial Intelligence</li>
-                            <li><strong>Allianz SE (Germany)</strong>, Global Lead Data Scientist</li>
+                            <li><strong>Allianz SE</strong>, Global Lead Data Scientist</li>
                         </ul>
                     </div>
 
