--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2 class="section-title">About</h2>
             <div class="section-content">
                 <p>
-                    I lead technology companies that are building and commercialising intelligent systems, delivering a decisive advantage in high-stakes environments. I have a proven track record of scaling technology, teams, and revenue to build market-leading businesses.                </p>
+                    I work with technology companies that are building and commercialising intelligent systems, delivering a decisive advantage in high-stakes environments. I help companies to scale technology, teams, and revenue to build market-leading businesses.                </p>
                 </p>
             </div>
         </section>
