--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Christopher Laing - Technology & Innovation Executive delivering intelligence, data, and AI systems">
     <meta name="author" content="Christopher Laing">
-    <title>Christopher Laing | Technology & Innovation Executive</title>
+    <title>Christopher Laing | Technology Executive</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
@@ -32,8 +32,8 @@
                 <p class="tagline">Advancing national capability through intelligent systems.</p>
                 <div class="hero-contact">
                     <a href="https://www.linkedin.com/in/christopherlaing" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-                    <span class="separator">/</span>
-                    <a href="/Christopher_Laing.vcf" download>Add contact</a>
+                    <span class="separator">|</span>
+                    <a href="/Christopher_Laing.vcf" download>vCard</a>
                 </div>
             </div>
             <button class="scroll-down" aria-label="Scroll to next section">
